--- a/app/apps/release_notes/templates/public/notificaties/snack_overzicht_aantal.html
+++ b/app/apps/release_notes/templates/public/notificaties/snack_overzicht_aantal.html
@@ -1,4 +1,4 @@
-<turbo-stream action="update" target="profiel_notificatie_lijst_aantal">
+<turbo-stream action="update" target="snack_overzicht_aantal">
 <template>
     Notificaties <small data-notificaties--manager-snack-overzicht-aantal-value="{{ aantal }}">({{ aantal }})</small>
 </template>
