Css and js fixes after merge

--- a/app/apps/release_notes/templates/public/notificaties/toast_message_item.html
+++ b/app/apps/release_notes/templates/public/notificaties/toast_message_item.html
@@ -13,6 +13,10 @@
         <div class="container__content">
             <h3>{{ message }}</h3>
         </div>
+        <button type="button"
+                class="btn-close--small"
+                aria-label="Sluit"
+                data-action="notificaties--toast-item#hideNotification">{% include "icons/close.svg" %}</button>
     </div>
 </template>
 </turbo-stream>
