--- a/app/apps/release_notes/templates/public/notificaties/snack_overzicht.html
+++ b/app/apps/release_notes/templates/public/notificaties/snack_overzicht.html
@@ -15,9 +15,9 @@
                 data-action="utils#noHover"
                 data-utils-targetcontainer-param="container__uitklapper">{% include "icons/close.svg" %}</button>
     </header>
-    <ul id="snack_overzicht_tabs" class="list-horizontal">
+    <div id="snack_overzicht_tabs" class="container__snack-tabs">
         {% include "public/notificaties/snack_overzicht_tabs.html" with filter=filter ongelezen_aantal=ongelezen_aantal only %}
-    </ul>
+    </div>
     <div class="container__lijst">
         <ul id="snack_overzicht" class="list-notificaties">
             {% for object in paginering.object_list %}
