--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -1,4 +1,4 @@
-#snack_lijst {
+#tf_snack_lijst {
     position: fixed;
     top: 35px;
     height: 100%;
@@ -12,6 +12,8 @@
 
     .show-modal & {
         opacity: 0;
+        z-index: 1;
+        pointer-events: none;
     }
 }
 
@@ -31,9 +33,10 @@
     flex-direction: column;
     justify-content: flex-start;
     gap: 5px;
+    transition: gap $transition-duration-default $transition-ease-default;
 
     .notification {
-        padding: 0 2em 0 0.75em;
+        padding: 0.75em 2em 0.75em 0.75em;
         position: relative;
         background-color: $white;
         border-radius: 8px;
@@ -45,8 +48,6 @@
         transition-timing-function: $transition-ease-default;
         overflow: hidden;
         font-size: 0.8em;
-        padding-top: 0.75em;
-        padding-bottom: 0.75em;
         display: flex;
         justify-content: flex-start;
         gap: 10px;
@@ -64,18 +65,16 @@
         }
     }
 
-    &:not(.expanded):not(.collapsed) {
+    &.expanded {
         .notification {
-            @for $i from 1 through 10 {
+            @for $i from 2 through 10 {
                 &:nth-child(#{$i}n) {
-                    z-index: #{$i * -10};
-                    animation: fade-in
-                        2 *
-                        $transition-duration-default
-                        $transition-ease-default
-                        #{$i *
-                        0.25}s
-                        forwards;
+                    max-height: 600px;
+                    > div,
+                    > button {
+                        opacity: 1;
+                        transition: opacity $transition-duration-default $transition-ease-default;
+                    }
                 }
             }
         }
@@ -88,12 +87,13 @@
                 &:nth-child(#{$i}n) {
                     z-index: #{$i * -10};
                     transform: scale(calc(1 - #{$i * 0.02}));
-                    height: 5px;
+                    max-height: 5px;
                     padding: 0;
                     margin-top: -1px;
                     > div,
                     > button {
                         opacity: 0;
+                        transition: opacity $transition-duration-default $transition-ease-default;
                     }
                 }
             }
@@ -175,20 +175,17 @@
                 top: 0.5em;
             }
 
-            &.show,
-            &.init {
-                .container__content {
-                    .container__message {
-                        display: flex;
-                        gap: 1em;
-                        flex: 1 0 90%;
-                        justify-content: space-between;
+            .container__content {
+                .container__message {
+                    display: flex;
+                    gap: 1em;
+                    flex: 1 0 90%;
+                    justify-content: space-between;
 
-                        .container__link {
-                            a {
-                                transform: translateY(-0.6em);
-                                margin-right: 0;
-                            }
+                    .container__link {
+                        a {
+                            transform: translateY(-0.6em);
+                            margin-right: 0;
                         }
                     }
                 }
@@ -209,11 +206,36 @@
     &--snack {
         max-width: 714px;
         z-index: 2000;
+
+        &:not(.expanded):not(.collapsed) {
+            .notification {
+                @for $i from 1 through 10 {
+                    &:nth-child(#{$i}n) {
+                        z-index: #{$i * -10};
+                        animation: fade-in
+                            2 *
+                            $transition-duration-default
+                            $transition-ease-default
+                            #{$i *
+                            0.25}s
+                            forwards;
+                    }
+                }
+            }
+        }
+
+        .notification {
+            &.hide {
+                transform: scale(0.98, 0);
+                height: 0;
+                transition: all $transition-duration-default $transition-ease-default;
+            }
+        }
     }
 
     &--toast {
         max-width: 360px;
-        z-index: 3000;
+        z-index: 30000;
         width: 98%;
         position: fixed;
         top: 35px;
@@ -224,11 +246,8 @@
         pointer-events: none;
 
         .notification {
-            &.show,
-            &.init {
-                padding-top: 1em;
-                padding-bottom: 1em;
-            }
+            animation: slide-in-from-bottom $transition-duration-default $transition-ease-default
+                forwards 0.5s;
 
             .btn-close--small {
                 opacity: 0;
@@ -259,8 +278,8 @@
                 font-size: 0.75em;
 
                 &.hide {
-                    opacity: 0;
-                    transform: translateY(20px) scale(1);
+                    animation: slide-out-to-bottom $transition-duration-default
+                        $transition-ease-default;
                 }
             }
         }
