--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -370,6 +370,22 @@
         }
     }
 
+    .container__laadmeer {
+        padding: 0.5em $input-padding-x 0.8em;
+        border-top: 1px solid $blue-200;
+        text-align: center;
+        a {
+            color: inherit;
+            font-size: 0.7em;
+            transition: all $transition-duration-default $transition-ease-default;
+
+            &:hover {
+                color: $primary;
+                text-decoration: none;
+            }
+        }
+    }
+
     .list-notificaties {
         @include list-clean();
         li {
@@ -406,6 +422,10 @@
             }
             p {
                 margin: 0;
+            }
+            small {
+                font-size: 0.6em;
+                color: $gray-800;
             }
         }
         .dot {
