--- a/app/apps/release_notes/templates/public/notificaties/snack_overzicht_aantal.html
+++ b/app/apps/release_notes/templates/public/notificaties/snack_overzicht_aantal.html
@@ -1,5 +1,5 @@
 <turbo-stream action="update" target="snack_overzicht_aantal">
 <template>
-    Notificaties <small data-notificaties--manager-snack-overzicht-aantal-value="{{ aantal }}">({{ aantal }})</small>
+    Notificaties
 </template>
 </turbo-stream>
