--- a/app/apps/release_notes/templates/public/notificaties/toast_message_item.html
+++ b/app/apps/release_notes/templates/public/notificaties/toast_message_item.html
@@ -1,7 +1,6 @@
 <turbo-stream action="append" target="toast_lijst">
 <template>
     <div class="notification {{ message.tags }}"
-         id="notificatie_{{ id }}"
          data-controller="notificaties--toast-item"
          data-notificaties--toast-item-niveau-value="{{ message.tags }}"
          data-notificaties--manager-target="toastItem">
@@ -11,7 +10,7 @@
             {% endwith %}
         </div>
         <div class="container__content">
-            <h3>{{ message }}</h3>
+            <h3>{{ message.message }}</h3>
         </div>
         <button type="button"
                 class="btn-close--small"
