--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -34,6 +34,9 @@ $red-400: #ffd5d5;
 $blue-100: #f7f9fa;
 $blue-200: #eaeef1;
 $blue-900: #104ccb;
+$gray-100: #f4f4f5;
+$gray-200: #eaeaea;
+$gray-400: #b7bdc7;
 $gray-600: #7f838a;
 $gray-800: #666666;
 
