--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -355,8 +355,21 @@
         flex-direction: column;
         justify-content: space-between;
         scroll-behavior: smooth;
-        ::-webkit-scrollbar {
+        &::-webkit-scrollbar {
             width: 5px;
+        }
+        &::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 5px grey;
+            border-radius: 10px;
+        }
+        &::-webkit-scrollbar-thumb {
+            background: $gray-400;
+            border-radius: 10px;
+        }
+
+        /* Handle on hover */
+        &::-webkit-scrollbar-thumb:hover {
+            background: $gray-600;
         }
         @media (min-width: map-get($grid-breakpoints, lg)) {
             height: 550px;
