--- a/app/apps/release_notes/templates/public/notificaties/snack_overzicht_aantal_ongelezen.html
+++ b/app/apps/release_notes/templates/public/notificaties/snack_overzicht_aantal_ongelezen.html
@@ -1,8 +1,12 @@
 <turbo-stream action="update" target="snack_overzicht_aantal_ongelezen">
 <template>
-    {% include "icons/notification-alert.svg" %}
-    <span class="badge--unread-count">
-        <span>{{ aantal }}</span>
-    </span>
+    {% if aantal > 0 %}
+        {% include "icons/notification-alert.svg" %}
+        <span class="badge--unread-count">
+            <span>{{ aantal }}</span>
+        </span>
+    {% else %}
+        <span class="padding--right">{% include "icons/notification-alert-open.svg" %}</span>
+    {% endif %}
 </template>
 </turbo-stream>
