--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -125,21 +125,23 @@ fieldset {
         box-shadow: 0 1px 0 $invalid-color;
         margin-bottom: 0;
     }
+}
 
-    .invalid-text {
-        margin-top: 0.5rem;
-        margin-bottom: 0.25rem;
-        padding-left: 1rem;
-        position: relative;
+.is-invalid + .invalid-text,
+.is-invalid .invalid-text {
+    margin-top: 0.5rem;
+    margin-bottom: 0.25rem;
+    padding-left: 1rem;
+    position: relative;
 
-        &:before {
-            content: url("../icons/warning_triangle.svg");
-            position: absolute;
-            left: 0;
-            top: 1px;
-        }
+    &:before {
+        content: url("../icons/warning_triangle.svg");
+        position: absolute;
+        left: 0;
+        top: 1px;
     }
 }
+
 .was-validated .form-select:invalid,
 .form-select.is-invalid {
     border-color: #404b4f;
