--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -23,16 +23,12 @@
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    // opacity: 0;
-    // animation: slide-in-from-top-centered $transition-duration-default $transition-ease-default
-    // forwards 0.5s;
     padding: 0 1em;
     pointer-events: none;
     touch-action: manipulation; /* Laat standaard click en hover gedrag toe */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 5px;
     transition: gap $transition-duration-default $transition-ease-default;
 
     .notification {
@@ -52,6 +48,7 @@
         justify-content: flex-start;
         gap: 10px;
         opacity: 0;
+        margin-top: 5px;
 
         &:not(:nth-child(-n + 10)) {
             display: none !important;
@@ -206,7 +203,6 @@
     &--snack {
         max-width: 714px;
         z-index: 2000;
-        // gap: 0;
 
         &:not(.expanded):not(.collapsed) {
             .notification {
