--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -21,7 +21,7 @@
         }
 
         .container__user {
-            padding: 1em 0.5em 1em 1.2em;
+            padding: 1em 0.5em 1em 0;
             display: flex;
 
             .container__uitklapper {
@@ -54,8 +54,11 @@
                     &--large {
                         width: 98vw;
                         max-width: 400px;
-                        // opacity: 1;
-                        // pointer-events: all;
+                        right: -12vw;
+
+                        @media (min-width: map-get($grid-breakpoints, md)) {
+                            right: 1vw;
+                        }
                     }
 
                     &:not(.container__profiel_notificatie_lijst) {
@@ -107,7 +110,8 @@
 
         .trigger--block {
             display: inline-block;
-            width: 2em;
+            width: 5em;
+            margin-left: -5em;
         }
     }
 }
