refactor classname badge-count

--- a/app/apps/main/templates/snippets/aside.html
+++ b/app/apps/main/templates/snippets/aside.html
@@ -36,7 +36,7 @@
                         {% include "icons/nieuw.svg" %}
                         <span class="nav--wide">Nieuw in PlanR</span>
                         {% if UNWATCHED_COUNT > 0 %}
-                            <span class="badge--unread-count">
+                            <span class="badge-count">
                                 <span>
                                     {% if UNWATCHED_COUNT < 101 %}
                                         {{ UNWATCHED_COUNT }}
