--- a/app/apps/release_notes/templates/public/notificaties/snack_overzicht_aantal_ongelezen.html
+++ b/app/apps/release_notes/templates/public/notificaties/snack_overzicht_aantal_ongelezen.html
@@ -2,7 +2,7 @@
 <template>
     {% if aantal > 0 %}
         {% include "icons/notification-alert.svg" %}
-        <span class="badge--unread-count">
+        <span class="badge-count">
             <span>{{ aantal }}</span>
         </span>
     {% else %}
