--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -140,7 +140,7 @@
         }
     }
 
-    .badge--unread-count {
+    .badge-count {
         position: absolute;
         transform: translate(-60%, -40%);
         background-color: $primary;
