--- a/app/frontend/assets/styles/components/_navigation.scss
+++ b/app/frontend/assets/styles/components/_navigation.scss
@@ -209,7 +209,7 @@
         }
     }
 
-    .badge--unread-count {
+    .badge-count {
         transform: translate(0, -10%);
         transition: transform $transition-duration-default $transition-ease-default;
     }
@@ -236,7 +236,7 @@
             }
         }
 
-        .badge--unread-count {
+        .badge-count {
             width: 12px;
             height: 12px;
             transform: translate(-15px, -6px);
