--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -229,6 +229,7 @@
             &.hide {
                 transform: scale(0.98, 0);
                 height: 0;
+                padding: 0;
                 opacity: 0;
                 transition: all $transition-duration-default $transition-ease-default;
             }
