session timer without modal: refresh 1s

--- a/app/apps/authenticatie/templates/auth/session_timer.html
+++ b/app/apps/authenticatie/templates/auth/session_timer.html
@@ -6,7 +6,7 @@
          data-sessionTimer-session-expiry-max-timestamp-value="{{ SESSION_EXPIRY_MAX_TIMESTAMP }}"
          data-sessionTimer-session-expire-after-last-activity-grace-period-value="{{ SESSION_EXPIRE_AFTER_LAST_ACTIVITY_GRACE_PERIOD }}"
          data-sessionTimer-session-expiry-timestamp-value="{{ SESSION_EXPIRY_TIMESTAMP }}">
-        <span data-sessionTimer-target="uitleg"></span>
+        <span data-sessionTimer-target="uitleg" style="white-space: wrap;"></span>
     </div>
     </turbo-frame>
 {% endif %}
