--- a/app/apps/release_notes/templates/public/notificaties/snack_overzicht_aantal_ongelezen.html
+++ b/app/apps/release_notes/templates/public/notificaties/snack_overzicht_aantal_ongelezen.html
@@ -6,7 +6,7 @@
             <span>{{ aantal }}</span>
         </span>
     {% else %}
-        <span class="padding--right">{% include "icons/notification-alert-open.svg" %}</span>
+        <span>{% include "icons/notification-alert-open.svg" %}</span>
     {% endif %}
 </template>
 </turbo-stream>
