--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -409,7 +409,7 @@
         &::-webkit-scrollbar-thumb:hover {
             background: $gray-600;
         }
-        @media (min-width: map-get($grid-breakpoints, lg)) {
+        @media (min-width: map-get($grid-breakpoints, md)) {
             height: 550px;
             overflow-y: auto;
         }
