Styling notification-count, +99

--- a/app/apps/release_notes/templates/public/notificaties/snack_overzicht_aantal_ongelezen.html
+++ b/app/apps/release_notes/templates/public/notificaties/snack_overzicht_aantal_ongelezen.html
@@ -3,7 +3,13 @@
     {% if aantal > 0 %}
         {% include "icons/notification-alert.svg" %}
         <span class="badge-count">
-            <span>{{ aantal }}</span>
+            {% if aantal > 0 %}
+                {% if aantal < 101 %}
+                    <span>{{ aantal }}</span>
+                {% else %}
+                    <span>+99</span>
+                {% endif %}
+            {% endif %}
         </span>
     {% else %}
         <span>{% include "icons/notification-alert-open.svg" %}</span>
