--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -164,6 +164,7 @@ body:not(.hasTouch) {
         background-color: $primary;
         span {
             display: inline-block;
+            font-size: 0.8333em;
         }
         width: 1.5em;
         height: 1.5em;
