--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -269,6 +269,11 @@ table {
     }
 }
 
+* {
+    &:focus {
+        @include focus-outline();
+    }
+}
 a,
 .link {
     color: $primary;
@@ -278,10 +283,6 @@ a,
     &:hover,
     &:focus {
         text-decoration: none;
-    }
-
-    &:focus {
-        @include focus-outline();
     }
 
     &.link--location {
