--- a/app/apps/main/templates/snippets/pageheader.html
+++ b/app/apps/main/templates/snippets/pageheader.html
@@ -7,14 +7,15 @@
     <div class="container__user">
         <div class="container__uitklapper"
              data-controller="utils"
-             data-action="click->utils#show">
+             data-action="click->utils#show"
+             tabindex="0">
             <span class="trigger--block"></span>
             {% if request.user.is_authenticated %}
                 <turbo-frame id="tf_snack_overzicht" src="{% url 'snack_overzicht' %}">
                 </turbo-frame>
             {% endif %}
         </div>
-        <div class="container__uitklapper">
+        <div class="container__uitklapper" tabindex="0">
             <span class="trigger--profile">
                 <span class="initials">{{ request.user|gebruikersinitialen }}</span>
             </span>
