--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -498,7 +498,7 @@
                 margin: 0.7em 0 0;
             }
             p {
-                margin: 0;
+                margin-top: 0;
                 overflow: hidden;
                 transition: height $transition-duration-default $transition-ease-default;
             }
