--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -141,6 +141,9 @@ main {
     @media (min-width: map-get($grid-breakpoints, md)) {
         grid-template-columns: 66fr 34fr;
 
+        &.grid-container--4-1 {
+            grid-template-columns: 4fr 1fr;
+        }
         &.grid-container--full {
             grid-template-columns: 1fr;
         }
@@ -730,6 +733,10 @@ body.no-js {
 
 .padding-bottom-half {
     padding-bottom: 0.5em;
+}
+
+.margin-bottom {
+    margin-bottom: 1rem;
 }
 
 .margin--bottom {
